Create search fragment UI Create repos adapter Integrate API/database calls

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#29272C</color>
+    <color name="colorPrimaryDark">#1D1A21</color>
+    <color name="colorAccent">#C65F65</color>
+
+    <color name="textColorPrimary">#FFFDFF</color>
+    <color name="textColorSecondary">#737075</color>
+
 </resources>
