--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
   <androidx.appcompat.widget.Toolbar
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:theme="@style/AppTheme.AppBarOverlay">
+      android:theme="@style/AppTheme.AppBarOverlay"
+      app:titleTextAppearance="@style/ToolbarTitleBarTextAppearance">
 
     <ProgressBar
       android:id="@+id/toolbarProgressCircle"
@@ -20,4 +22,5 @@
       android:visibility="gone" />
 
   </androidx.appcompat.widget.Toolbar>
+
 </LinearLayout>
