--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="textColorPrimary">#FFFDFF</color>
     <color name="textColorSecondary">#737075</color>
 
+    <color name="hyperlinkBlue">#1aa3ff</color>
 </resources>
