--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.luja93.githubreposearch.githubreposearch.repodetails.RepoDetailsFragment">
+    tools:context="com.luja93.githubreposearch.githubreposearch.userdetails.UserDetailsFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -41,30 +41,48 @@
             android:background="@color/colorPrimary">
 
             <com.luja93.githubreposearch.githubreposearch.customview.DetailsTextView
-                android:id="@+id/fork_details_DTV"
+                android:id="@+id/type_details_DTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <com.luja93.githubreposearch.githubreposearch.customview.DetailsTextView
-                android:id="@+id/watchers_details_DTV"
+                android:id="@+id/email_details_DTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_padding_small" />
 
             <com.luja93.githubreposearch.githubreposearch.customview.DetailsTextView
-                android:id="@+id/issues_details_DTV"
+                android:id="@+id/location_details_DTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_padding_small" />
 
             <com.luja93.githubreposearch.githubreposearch.customview.DetailsTextView
-                android:id="@+id/language_details_DTV"
+                android:id="@+id/public_repos_details_DTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_padding_small" />
 
             <com.luja93.githubreposearch.githubreposearch.customview.DetailsTextView
-                android:id="@+id/desc_details_DTV"
+                android:id="@+id/public_gists_details_DTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_padding_small" />
+
+            <com.luja93.githubreposearch.githubreposearch.customview.DetailsTextView
+                android:id="@+id/followers_details_DTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_padding_small" />
+
+            <com.luja93.githubreposearch.githubreposearch.customview.DetailsTextView
+                android:id="@+id/following_details_DTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_padding_small" />
+
+            <com.luja93.githubreposearch.githubreposearch.customview.DetailsTextView
+                android:id="@+id/bio_details_DTV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/default_padding_small" />
