--- a/app/src/main/res/layout/dialog_loader.xml
+++ b/app/src/main/res/layout/dialog_loader.xml
@@ -6,6 +6,7 @@
   android:layout_gravity="center"
   android:gravity="center"
   android:orientation="vertical"
+    android:background="@color/colorPrimary"
   android:padding="24dp">
 
   <ImageView
