--- a/app/src/main/res/layout/fragment_search_repos.xml
+++ b/app/src/main/res/layout/fragment_search_repos.xml
@@ -39,6 +39,38 @@
         android:paddingTop="@dimen/default_padding_medium"
         android:clipToPadding="false"
         app:layout_constraintTop_toBottomOf="@id/appBarLayout"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone" />
+
+    <ImageView
+        android:id="@+id/github_IV"
+        android:layout_width="@dimen/main_logo_width"
+        android:layout_height="@dimen/main_logo_height"
+        android:tint="@color/textColorPrimary"
+        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
+        app:layout_constraintBottom_toTopOf="@id/instructions_TV"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:srcCompat="@drawable/ic_github_logo" />
+
+    <TextView
+        android:id="@+id/instructions_TV"
+        style="@style/Note"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginTop="@dimen/default_padding_medium"
+        app:layout_constraintTop_toBottomOf="@id/github_IV"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:textAlignment="center"
+        android:text="@string/intructions_phrase" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/instructions_group"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:constraint_referenced_ids="instructions_TV,github_IV" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
