--- a/app/src/main/res/layout/item_repo.xml
+++ b/app/src/main/res/layout/item_repo.xml
@@ -43,7 +43,8 @@
             android:layout_marginEnd="@dimen/default_padding_medium"
             app:layout_constraintStart_toEndOf="@id/avatar_IV"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/avatar_IV"
+            app:layout_constraintBottom_toTopOf="@id/username_TV"
             app:layout_constraintHorizontal_bias="0"
             tools:text="Repo name" />
 
@@ -55,10 +56,12 @@
             app:layout_constraintStart_toStartOf="@id/repo_name_TV"
             app:layout_constraintEnd_toEndOf="@id/repo_name_TV"
             app:layout_constraintTop_toBottomOf="@id/repo_name_TV"
+            app:layout_constraintBottom_toBottomOf="@id/avatar_IV"
             android:foreground="?attr/selectableItemBackgroundBorderless"
             tools:text="Username" />
 
         <View
+            android:id="@+id/divider"
             style="@style/Divider"
             android:layout_width="0dp"
             android:layout_height="0.5dp"
@@ -72,10 +75,10 @@
             style="@style/Body"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/default_padding_medium"
+            android:layout_marginTop="@dimen/default_padding_small"
             android:textAlignment="center"
             app:layout_constraintStart_toStartOf="@id/repo_name_TV"
-            app:layout_constraintTop_toBottomOf="@id/username_TV"
+            app:layout_constraintTop_toBottomOf="@id/divider"
             app:layout_constraintEnd_toStartOf="@id/watchers_TV"
             app:layout_constrainedWidth="true"
             app:layout_constraintHorizontal_chainStyle="spread"
