--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,5 +9,7 @@
     <dimen name="card_corner_radius_default">10dp</dimen>
     <dimen name="avatar_width_large">90dp</dimen>
     <dimen name="avatar_height_large">90dp</dimen>
+    <dimen name="main_logo_width">120dp</dimen>
+    <dimen name="main_logo_height">120dp</dimen>
 
 </resources>
