--- a/app/src/main/res/values/styles_text.xml
+++ b/app/src/main/res/values/styles_text.xml
@@ -5,6 +5,10 @@
         <item name="android:textColor">@color/textColorPrimary</item>
         <item name="android:textAlignment">textStart</item>
         <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="Title.Bold" parent="Title">
         <item name="android:textStyle">bold</item>
     </style>
 
@@ -13,6 +17,13 @@
         <item name="android:textAlignment">textStart</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">normal</item>
+    </style>
+
+    <style name="Note">
+        <item name="android:textColor">@color/textColorPrimary</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
 </resources>
