--- a/app/src/main/res/values/styles_text.xml
+++ b/app/src/main/res/values/styles_text.xml
@@ -26,4 +26,9 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="Input" parent="Body">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/textColorPrimary</item>
+    </style>
+
 </resources>
