--- a/app/src/main/res/layout/fragment_search_repos.xml
+++ b/app/src/main/res/layout/fragment_search_repos.xml
@@ -26,15 +26,27 @@
                 android:id="@+id/search_repos_ET"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/default_padding_small"
+                android:layout_marginEnd="@dimen/default_padding_large"
                 android:textAppearance="@style/Input"
                 android:hint="@string/search_repos_phrase"
                 android:textColorHint="@color/textColorSecondary"
                 android:textColor="@color/textColorPrimary"
                 android:maxLines="1"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/sort_btn"
+                app:layout_constraintEnd_toStartOf="@id/by_TV"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/by_TV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/Input"
+                android:textStyle="italic"
+                app:layout_constraintTop_toTopOf="@id/search_repos_ET"
+                app:layout_constraintBottom_toBottomOf="@id/search_repos_ET"
+                app:layout_constraintStart_toEndOf="@id/search_repos_ET"
+                app:layout_constraintEnd_toStartOf="@id/sort_btn"
+                android:text="@string/by_phrase" />
 
             <TextView
                 android:id="@+id/sort_btn"
@@ -49,54 +61,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/search_repos_ET"
                 app:layout_constraintBottom_toBottomOf="@id/search_repos_ET"
-                android:text="@string/sort_by_phrase" />
-
-            <!--            <com.google.android.material.textfield.TextInputLayout-->
-            <!--                style="@style/TextInputLayoutStyle"-->
-            <!--                android:layout_width="0dp"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:layout_marginEnd="@dimen/default_padding_medium"-->
-            <!--                app:boxBackgroundColor="@color/colorPrimaryDark"-->
-            <!--                app:boxStrokeColor="@color/colorPrimaryDark"-->
-            <!--                app:layout_constraintTop_toTopOf="parent"-->
-            <!--                app:layout_constraintStart_toStartOf="parent"-->
-            <!--                app:layout_constraintEnd_toStartOf="@id/sort_TIL"-->
-            <!--                app:hintTextColor="@color/colorPrimary"-->
-            <!--                android:textColorHint="@color/colorPrimary"-->
-            <!--                android:hint="@string/search_repos_phrase">-->
-
-            <!--                <com.google.android.material.textfield.TextInputEditText-->
-            <!--                    android:id="@+id/search_repos_ET"-->
-            <!--                    android:layout_width="match_parent"-->
-            <!--                    android:layout_height="wrap_content"-->
-            <!--                    android:textColor="@color/textColorPrimary"-->
-            <!--                    android:maxLines="1"/>-->
-
-            <!--            </com.google.android.material.textfield.TextInputLayout>-->
-
-            <!--            <com.google.android.material.textfield.TextInputLayout-->
-            <!--                android:id="@+id/sort_TIL"-->
-            <!--                style="@style/DropdownTextInputLayoutStyle"-->
-            <!--                app:boxBackgroundColor="@color/colorPrimaryDark"-->
-            <!--                android:background="@null"-->
-            <!--                android:layout_width="0dp"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:minWidth="120dp"-->
-            <!--                app:layout_constraintTop_toTopOf="parent"-->
-            <!--                app:layout_constraintEnd_toEndOf="parent">-->
-
-            <!--                <AutoCompleteTextView-->
-            <!--                    android:id="@+id/sort_ACTV"-->
-            <!--                    android:layout_width="match_parent"-->
-            <!--                    android:layout_height="wrap_content"-->
-            <!--                    android:textColor="@color/textColorPrimary"-->
-            <!--                    android:cursorVisible="false"-->
-            <!--                    android:focusable="false"-->
-            <!--                    android:focusableInTouchMode="false"-->
-            <!--                    android:hint="@string/sort_by_phrase"-->
-            <!--                    android:longClickable="false" />-->
-
-            <!--            </com.google.android.material.textfield.TextInputLayout>-->
+                tools:text="@string/sort_by_phrase" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
