--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -23,6 +23,7 @@
         app:layout_constraintTop_toBottomOf="@id/appBarLayout" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/details_card_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/default_padding_medium"
@@ -101,5 +102,42 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+    <ImageView
+        android:id="@+id/github_IV"
+        android:layout_width="@dimen/main_logo_width"
+        android:layout_height="@dimen/main_logo_height"
+        android:tint="@color/textColorPrimary"
+        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
+        app:layout_constraintBottom_toTopOf="@id/warning_TV"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        app:srcCompat="@drawable/ic_github_logo" />
+
+    <TextView
+        android:id="@+id/warning_TV"
+        style="@style/Note"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/default_padding_extra_large"
+        android:layout_marginEnd="@dimen/default_padding_extra_large"
+        android:layout_marginTop="@dimen/default_padding_large"
+        app:layout_constraintTop_toBottomOf="@id/github_IV"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:textAlignment="center"
+        android:text="@string/user_not_found_phrase" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/details_group"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:constraint_referenced_ids="details_header_view,details_card_container" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/warning_group"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:constraint_referenced_ids="github_IV,warning_TV" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
