--- a/app/src/main/res/layout/item_repo.xml
+++ b/app/src/main/res/layout/item_repo.xml
@@ -114,6 +114,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:maxLines="1"
+            android:autoSizeTextType="uniform"
             app:layout_constraintStart_toStartOf="@id/forks_TV"
             app:layout_constraintTop_toBottomOf="@id/forks_TV"
             app:layout_constraintEnd_toEndOf="@id/forks_TV"
@@ -137,6 +139,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:maxLines="1"
+            android:autoSizeTextType="uniform"
             app:layout_constraintStart_toStartOf="@id/issues_TV"
             app:layout_constraintEnd_toEndOf="@id/issues_TV"
             app:layout_constraintTop_toTopOf="@id/forks_count_TV"
