--- a/app/src/main/res/layout/item_repo.xml
+++ b/app/src/main/res/layout/item_repo.xml
@@ -41,6 +41,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/default_padding_small"
             android:layout_marginEnd="@dimen/default_padding_medium"
+            android:maxLines="2"
+            android:autoSizeTextType="uniform"
             app:layout_constraintStart_toEndOf="@id/avatar_IV"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/avatar_IV"
