Update navigation, UI and implement pagination
Implement pagination via Generic Paginator
Update navigation, replacing manually written fragment transactions with
NavigationComponent
Update UI of the pagination adapter cards and screen toolbars
Refactor, update and optimize code

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,6 +23,13 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Light" />
 
+    <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="SearchViewTheme" parent="Widget.AppCompat.SearchView">
+        <item name="android:textSize">@dimen/search_view_text_size</item>
+        <item name="queryBackground">@color/textColorSecondary</item>
+    </style>
+
     <style name="ToolbarTitleBarTextAppearance" parent="android:TextAppearance">
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textSize">@dimen/toolbar_title_text_size</item>
@@ -41,5 +48,4 @@
         <item name="android:background">@color/textColorSecondary</item>
         <item name="android:alpha">0.3</item>
     </style>
-
 </resources>
