--- a/app/src/main/res/layout/fragment_search_repos.xml
+++ b/app/src/main/res/layout/fragment_search_repos.xml
@@ -1,116 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:focusableInTouchMode="true"
+    android:fitsSystemWindows="true"
     tools:context=".githubreposearch.search.SearchReposFragment">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout"
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:orientation="vertical">
 
-        <include layout="@layout/toolbar_layout" />
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:paddingTop="@dimen/default_padding_small"
+            android:background="@color/colorPrimary"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:theme="@style/ToolbarTheme"
+            app:layout_scrollFlags="scroll|enterAlways">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+            <ImageView
+                android:layout_width="@dimen/toolbar_icon_width"
+                android:layout_height="@dimen/toolbar_icon_height"
+                android:layout_gravity="center"
+                android:tint="@color/textColorPrimary"
+                app:srcCompat="@drawable/ic_github_logo" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/Note"
+                android:textColor="@android:color/white"
+                android:paddingStart="@dimen/default_padding_medium"
+                android:text="@string/app_name"
+                android:layout_gravity="center" />
+
+            <ProgressBar
+                android:id="@+id/toolbar_progress_circle"
+                style="@style/Widget.AppCompat.ProgressBar"
+                android:layout_width="@dimen/toolbar_progress_circle_width"
+                android:layout_height="@dimen/toolbar_progress_circle_height"
+                android:layout_gravity="end"
+                android:layout_marginEnd="@dimen/default_padding_medium"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+        </androidx.appcompat.widget.Toolbar>
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/search_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/default_padding_medium"
-            android:layout_marginEnd="@dimen/default_padding_medium"
-            android:layout_marginBottom="@dimen/default_padding_small">
-
-            <EditText
-                android:id="@+id/search_repos_ET"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/default_padding_large"
-                android:textAppearance="@style/Input"
-                android:hint="@string/search_repos_phrase"
-                android:textColorHint="@color/textColorSecondary"
-                android:textColor="@color/textColorPrimary"
-                android:maxLines="1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/by_TV"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/by_TV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/Input"
-                android:textStyle="italic"
-                app:layout_constraintTop_toTopOf="@id/search_repos_ET"
-                app:layout_constraintBottom_toBottomOf="@id/search_repos_ET"
-                app:layout_constraintStart_toEndOf="@id/search_repos_ET"
-                app:layout_constraintEnd_toStartOf="@id/sort_btn"
-                android:text="@string/by_phrase" />
-
-            <TextView
-                android:id="@+id/sort_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:minWidth="120dp"
-                android:textAppearance="@style/Input"
-                android:paddingStart="@dimen/default_padding_medium"
-                android:paddingEnd="@dimen/default_padding_medium"
-                android:paddingTop="@dimen/default_padding_small"
-                android:paddingBottom="@dimen/default_padding_small"
-                android:textAlignment="center"
-                android:background="?attr/selectableItemBackground"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/search_repos_ET"
-                app:layout_constraintBottom_toBottomOf="@id/search_repos_ET"
-                tools:text="@string/sort_by_phrase" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            android:background="@drawable/background_rounded_corners"
+            app:theme="@style/SearchViewTheme"
+            app:iconifiedByDefault="false"
+            app:queryHint="@string/search_repos_phrase"
+            android:layout_marginTop="@dimen/default_padding_small"
+            android:layout_marginBottom="@dimen/default_padding_medium"
+            android:layout_marginLeft="@dimen/default_padding_medium"
+            android:layout_marginRight="@dimen/default_padding_medium" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/repos_RV"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginStart="@dimen/default_padding_medium"
-        android:layout_marginEnd="@dimen/default_padding_medium"
-        android:paddingBottom="@dimen/default_padding_extra_large"
-        android:paddingTop="@dimen/default_padding_medium"
-        android:clipToPadding="false"
-        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="gone" />
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context=".githubreposearch.search.SearchReposFragment">
 
-    <ImageView
-        android:id="@+id/github_IV"
-        android:layout_width="@dimen/main_logo_width"
-        android:layout_height="@dimen/main_logo_height"
-        android:tint="@color/textColorPrimary"
-        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
-        app:layout_constraintBottom_toTopOf="@id/instructions_TV"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:srcCompat="@drawable/ic_github_logo" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/repos_RV"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginStart="@dimen/default_padding_medium"
+            android:layout_marginEnd="@dimen/default_padding_medium"
+            android:paddingBottom="@dimen/default_padding_extra_large"
+            android:paddingTop="@dimen/default_padding_medium"
+            android:clipToPadding="false"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/instructions_TV"
-        style="@style/Note"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/default_padding_extra_large"
-        android:layout_marginEnd="@dimen/default_padding_extra_large"
-        android:layout_marginTop="@dimen/default_padding_large"
-        app:layout_constraintTop_toBottomOf="@id/github_IV"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:textAlignment="center"
-        android:text="@string/instructions_phrase" />
+        <ImageView
+            android:id="@+id/github_IV"
+            android:layout_width="@dimen/main_logo_width"
+            android:layout_height="@dimen/main_logo_height"
+            android:tint="@color/textColorPrimary"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/instructions_TV"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:srcCompat="@drawable/ic_github_logo" />
 
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/instructions_group"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:constraint_referenced_ids="instructions_TV,github_IV" />
+        <TextView
+            android:id="@+id/instructions_TV"
+            style="@style/Note"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/default_padding_extra_large"
+            android:layout_marginEnd="@dimen/default_padding_extra_large"
+            android:layout_marginTop="@dimen/default_padding_large"
+            app:layout_constraintTop_toBottomOf="@id/github_IV"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:textAlignment="center"
+            android:text="@string/instructions_phrase" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/instructions_group"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:constraint_referenced_ids="instructions_TV,github_IV" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
