--- a/app/src/main/res/layout/item_details_text.xml
+++ b/app/src/main/res/layout/item_details_text.xml
@@ -10,7 +10,7 @@
         style="@style/Body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/textColorPrimary"
+        android:textColor="@color/textColorSecondary"
         tools:text="@string/forks_phrase" />
 
     <TextView
