--- a/app/src/main/res/layout/item_repo.xml
+++ b/app/src/main/res/layout/item_repo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/repo_CV"
@@ -7,6 +7,9 @@
     android:layout_height="wrap_content"
     android:backgroundTint="@color/colorPrimary"
     android:foreground="?attr/selectableItemBackgroundBorderless"
+    app:strokeColor="@color/textColorSecondary"
+    app:strokeWidth="1dp"
+    app:cardElevation="0dp"
     app:cardCornerRadius="@dimen/card_corner_radius_default">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -117,7 +120,6 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:maxLines="1"
-            android:autoSizeTextType="uniform"
             app:layout_constraintStart_toStartOf="@id/forks_TV"
             app:layout_constraintTop_toBottomOf="@id/forks_TV"
             app:layout_constraintEnd_toEndOf="@id/forks_TV"
@@ -155,4 +157,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
