--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,18 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <dimen name="toolbar_title_text_size">20sp</dimen>
-    <dimen name="avatar_width">60dp</dimen>
-    <dimen name="avatar_height">60dp</dimen>
+    <!--    General default values-->
     <dimen name="default_padding_small">8dp</dimen>
     <dimen name="default_padding_medium">16dp</dimen>
+    <dimen name="default_padding_large">24dp</dimen>
+    <dimen name="default_padding_extra_large">40dp</dimen>
     <dimen name="card_corner_radius_default">10dp</dimen>
+    <dimen name="default_spinner_radius">10dp</dimen>
+
+    <!--    Specific values-->
+    <dimen name="toolbar_progress_circle_width">16dp</dimen>
+    <dimen name="toolbar_progress_circle_height">16dp</dimen>
+
+    <dimen name="avatar_width">60dp</dimen>
+    <dimen name="avatar_height">60dp</dimen>
+
     <dimen name="avatar_width_large">90dp</dimen>
     <dimen name="avatar_height_large">90dp</dimen>
+
     <dimen name="main_logo_width">120dp</dimen>
     <dimen name="main_logo_height">120dp</dimen>
-    <dimen name="default_padding_extra_large">40dp</dimen>
-    <dimen name="default_padding_large">24dp</dimen>
-    <dimen name="default_spinner_radius">10dp</dimen>
+
+    <dimen name="toolbar_title_text_size">20sp</dimen>
+    <dimen name="toolbar_icon_height">40dp</dimen>
+    <dimen name="toolbar_icon_width">40dp</dimen>
+    <dimen name="search_view_text_size">18sp</dimen>
 
 </resources>
