--- a/app/src/main/res/layout/fragment_search_repos.xml
+++ b/app/src/main/res/layout/fragment_search_repos.xml
@@ -13,8 +13,8 @@
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
@@ -41,30 +41,63 @@
                 android:text="@string/app_name"
                 android:layout_gravity="center" />
 
-            <ProgressBar
-                android:id="@+id/toolbar_progress_circle"
-                style="@style/Widget.AppCompat.ProgressBar"
-                android:layout_width="@dimen/toolbar_progress_circle_width"
-                android:layout_height="@dimen/toolbar_progress_circle_height"
-                android:layout_gravity="end"
-                android:layout_marginEnd="@dimen/default_padding_medium"
-                android:visibility="gone"
-                tools:visibility="visible" />
-
         </androidx.appcompat.widget.Toolbar>
 
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/search_view"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/background_rounded_corners"
-            app:theme="@style/SearchViewTheme"
-            app:iconifiedByDefault="false"
-            app:queryHint="@string/search_repos_phrase"
-            android:layout_marginTop="@dimen/default_padding_small"
-            android:layout_marginBottom="@dimen/default_padding_medium"
-            android:layout_marginLeft="@dimen/default_padding_medium"
-            android:layout_marginRight="@dimen/default_padding_medium" />
+            android:paddingTop="@dimen/default_padding_small">
+
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/search_view"
+                app:theme="@style/SearchViewTheme"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/default_padding_medium"
+                android:layout_marginEnd="@dimen/default_padding_medium"
+                android:background="@drawable/background_rounded_corners"
+                app:iconifiedByDefault="false"
+                app:queryHint="@string/search_repos_phrase"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/sorting_btn" />
+
+            <ImageView
+                android:id="@+id/sorting_btn"
+                android:padding="@dimen/default_padding_small"
+                android:layout_width="@dimen/app_bar_layout_sort_icon_width"
+                android:layout_height="@dimen/app_bar_layout_sort_icon_height"
+                android:layout_marginEnd="@dimen/default_padding_medium"
+                android:background="?attr/selectableItemBackground"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_sort_24px" />
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"
+                android:translationY="@dimen/progress_bar_y_translation"
+                app:layout_constraintTop_toBottomOf="@id/sorting_btn"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="invisible" />
+
+            <View
+                android:id="@+id/progress_bar_placeholder"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:background="@color/colorAccent"
+                android:layout_marginTop="7dp"
+                android:alpha="0.5"
+                android:translationY="@dimen/progress_bar_y_translation"
+                app:layout_constraintTop_toTopOf="@id/progress_bar"
+                app:layout_constraintBottom_toBottomOf="@id/progress_bar"
+                android:visibility="visible" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
