--- a/app/src/main/res/layout/item_repo.xml
+++ b/app/src/main/res/layout/item_repo.xml
@@ -8,7 +8,7 @@
     android:backgroundTint="@color/colorPrimary"
     android:foreground="?attr/selectableItemBackgroundBorderless"
     app:strokeColor="@color/textColorSecondary"
-    app:strokeWidth="1dp"
+    app:strokeWidth="@dimen/default_stroke_width"
     app:cardElevation="0dp"
     app:cardCornerRadius="@dimen/card_corner_radius_default">
 
