--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="default_padding_extra_large">40dp</dimen>
     <dimen name="card_corner_radius_default">10dp</dimen>
     <dimen name="default_spinner_radius">10dp</dimen>
+    <dimen name="default_stroke_width">1dp</dimen>
 
     <!--    Specific values-->
     <dimen name="toolbar_progress_circle_width">16dp</dimen>
@@ -26,5 +27,11 @@
     <dimen name="toolbar_icon_height">40dp</dimen>
     <dimen name="toolbar_icon_width">40dp</dimen>
     <dimen name="search_view_text_size">18sp</dimen>
+    <dimen name="app_bar_layout_sort_icon_width">48dp</dimen>
+    <dimen name="app_bar_layout_sort_icon_height">48dp</dimen>
+
+    <dimen name="sorting_icon_bottom_sheet_image_width">24dp</dimen>
+    <dimen name="sorting_icon_bottom_sheet_image_height">24dp</dimen>
+    <dimen name="progress_bar_y_translation">6dp</dimen>
 
 </resources>
